Fixing social spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,7 @@ h3
 
 .social
 {
-    margin: 20px;
+    margin: 15px;
     text-align: center;
 }
 
